[package]
name = "zero2prod-axum"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "zero2prod"

[dependencies]
axum = {version = "0.7.4"}
reqwest = {version = "0.11.26"}
tokio = {version = "1.36.0", features = ["full"]}